--- a/app/src/main/res/drawable-v24/battery_view_green.xml
+++ b/app/src/main/res/drawable-v24/battery_view_green.xml
@@ -2,7 +2,7 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#3CB371"/>
+    <solid android:color="#7F3CB371"/>
     <corners
         android:bottomLeftRadius="40dp"
         android:bottomRightRadius="40dp" />
