--- a/app/src/main/res/drawable-v24/battery_view_red.xml
+++ b/app/src/main/res/drawable-v24/battery_view_red.xml
@@ -2,7 +2,7 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#FF0000"/>
+    <solid android:color="#7FFF0000"/>
     <corners
         android:bottomLeftRadius="40dp"
         android:bottomRightRadius="40dp" />
