--- a/app/src/main/res/drawable/ic_mobile_data_disabled.xml
+++ b/app/src/main/res/drawable/ic_mobile_data_disabled.xml
@@ -5,6 +5,6 @@
     android:viewportWidth="24">
     <path
         android:fillAlpha="0.3"
-        android:fillColor="#000000"
+        android:fillColor="@color/colorIcon"
         android:pathData="M16,17.01V10h-2v7.01h-3L15,21l4,-3.99h-3zM9,3L5,6.99h3V14h2V6.99h3L9,3z" />
 </vector>
