--- a/app/src/main/res/drawable/status_bar_shape.xml
+++ b/app/src/main/res/drawable/status_bar_shape.xml
@@ -2,7 +2,7 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#7Fd3d3df"/>
+    <solid android:color="@color/status_bar_background"/>
     <corners
         android:bottomLeftRadius="40dp"
         android:bottomRightRadius="40dp" />
